[workspace]
members = ["client", "pod", "common"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
tempfile = "3.10"
rand = "0.8"
ed25519-dalek = "2.0"
url = "2.5"
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures = "0.3"
futures-util = "0.3"
tracing = "0.1"
chrono = "0.4"


