[package]
name = "client"
version = "0.1.0"
authors = ["Albino Cordeiro <albino@intuitionlogic.com>"]
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
